# haskell-websockets-htmx

./: README.md  haskell-websockets-htmx.cabal  tags
app/: HtmlBuilder.hs  Main.hs
html/: index.html
